# ml-map

./: .gitignore  README.md  pyproject.toml  requirements.txt  retrieve_data.ipynb  run_full_pipeline.sh
app/: app.py  dims.json  package.json
app/assets/: data_0.json  data_1.json  data_2.json  data_3.json  data_4.json  data_5.json  index.js  schema.json  style.css
app/components/: settings.py  template_components.py
data/: labels.feather
mlmap/: __init__.py  app_utils.py  pipeline_embed.py  pipeline_predict.py  pipeline_train.py  transformer_utils.py
mlmap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: distilroberta-base__4 -__0.json  distilroberta-base__4 -__1.json  distilroberta-base__4 -__2.json  distilroberta-base__4 -_final.json  distilroberta-base__8 -__0.json  distilroberta-base__8 -__1.json  distilroberta-base__8 -__2.json  distilroberta-base__8 -_final.json  distilroberta-base__INCLUDE__0.json  distilroberta-base__INCLUDE__1.json  distilroberta-base__INCLUDE__2.json  distilroberta-base__INCLUDE_final.json  distilroberta-base_embeddings_ids.npy  prajjwal1__bert-tiny__4 -__0.json  prajjwal1__bert-tiny__4 -__1.json  prajjwal1__bert-tiny__4 -__2.json  prajjwal1__bert-tiny__4 -_final.json  prajjwal1__bert-tiny__8 -__0.json  prajjwal1__bert-tiny__8 -__1.json  prajjwal1__bert-tiny__8 -__2.json  prajjwal1__bert-tiny__8 -_final.json  prajjwal1__bert-tiny__INCLUDE__0.json  prajjwal1__bert-tiny__INCLUDE__1.json  prajjwal1__bert-tiny__INCLUDE__2.json  prajjwal1__bert-tiny__INCLUDE_final.json  trials.db
utils/: learning_utils.py
(+73 files in other folders)
